--- a/app/src/main/res/layout/activity_electronics.xml
+++ b/app/src/main/res/layout/activity_electronics.xml
@@ -4,161 +4,172 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdCategory.electronics">
+    tools:context=".electronics">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <include
+        android:id="@+id/top"
+        layout="@layout/toolbar"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginHorizontal="70dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/top">
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginHorizontal="70dp"
+            android:layout_marginTop="25dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Brand"
+                    android:inputType="textPersonName|textCapSentences" />
+
+                <EditText
+                    android:id="@+id/model"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Model"
+                    android:inputType="textPersonName|textCapSentences" />
+            </LinearLayout>
+
 
             <EditText
-                android:id="@+id/brand"
-                android:layout_width="wrap_content"
+                android:id="@+id/purchaseDate"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Brand"
-                android:inputType="textPersonName|textCapSentences" />
+                android:hint="Date of Purchase"
+                android:inputType="date" />
+
 
             <EditText
-                android:id="@+id/model"
-                android:layout_width="wrap_content"
+                android:id="@+id/sellingPrice"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Model"
-                android:inputType="textPersonName|textCapSentences" />
+                android:hint="Selling Price"
+                android:inputType="number" />
+
+
+            <EditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Description"
+                android:inputType="textMultiLine|textCapSentences" />
+
         </LinearLayout>
 
-
-        <EditText
-            android:id="@+id/purchaseDate"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/UploadImageButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="date"
-            android:hint="Date of Purchase" />
-
-
-        <EditText
-            android:id="@+id/sellingPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Selling Price"
-            android:inputType="number" />
-
-
-        <EditText
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Description"
-            android:inputType="textMultiLine|textCapSentences" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/imgLL"
-        android:layout_marginTop="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/UploadImageButton">
-
-        <ImageView
-            android:id="@+id/img1"
-            android:layout_width="0dp"
-            android:layout_height="130dp"
-            android:visibility="invisible"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="@+id/img2"
-            app:layout_constraintEnd_toStartOf="@+id/img2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/img2"/>
-
-        <ImageView
-            android:id="@+id/img2"
-            android:layout_width="0dp"
-            android:layout_height="130dp"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="5dp"
-            android:visibility="invisible"
+            android:layout_marginTop="25dp"
+            android:onClick="ChooseImage"
+            android:text="Upload Image"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/UploadImageButton" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-        <ImageView
-            android:id="@+id/img3"
-            android:layout_width="0dp"
-            android:layout_height="130dp"
-            android:layout_weight="1"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/img2"
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="(2-3 Images)"
+            app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
+            app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
+
+        <LinearLayout
+            android:id="@+id/imgLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img2"
-            app:layout_constraintTop_toTopOf="@+id/img2" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/UploadImageButton">
+
+            <ImageView
+                android:id="@+id/img1"
+                android:layout_width="0dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/img2"
+                app:layout_constraintEnd_toStartOf="@+id/img2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/img2" />
+
+            <ImageView
+                android:id="@+id/img2"
+                android:layout_width="0dp"
+                android:layout_height="130dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/UploadImageButton" />
+
+            <ImageView
+                android:id="@+id/img3"
+                android:layout_width="0dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/img2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/img2"
+                app:layout_constraintTop_toTopOf="@+id/img2" />
 
 
-    </LinearLayout>
+        </LinearLayout>
 
+        <Button
+            android:id="@+id/postButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:onClick="post"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="10dp"
+            android:text="Post"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgLL" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/postButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="post"
-        android:layout_marginTop="25dp"
-        android:text="Post"
-        android:paddingHorizontal="40dp"
-        android:paddingVertical="10dp"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgLL" />
-
-    <Button
-        android:id="@+id/UploadImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:onClick="ChooseImage"
-        android:text="Upload Image"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="(2-3 Images)"
-        app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
-        app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
 
 
 
