--- a/app/src/main/res/layout/activity_list_ad.xml
+++ b/app/src/main/res/layout/activity_list_ad.xml
@@ -6,28 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".ListAd">
 
-    <TextView
-        android:id="@+id/noAdsTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No Ads to Dispaly"
-        android:textSize="30sp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+    <include
+        android:id="@+id/top"
+        layout="@layout/toolbar" />
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/AdListRecyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        android:background="#e4f9f5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/top">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+            android:id="@+id/noAdsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Ads to Dispaly"
+            android:textSize="25sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/AdListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
