--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -6,9 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".newAdActivity">
 
+    <include
+        android:id="@+id/top"
+        layout="@layout/toolbar"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top">
+
+        <include layout="@layout/ad_category"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
     <ListView
         android:id="@+id/Category"
         android:layout_width="match_parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="60dp"
         android:layout_height="match_parent" />
+-->
 </androidx.constraintlayout.widget.ConstraintLayout>
