--- a/app/src/main/res/layout/activity_others.xml
+++ b/app/src/main/res/layout/activity_others.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdCategory.otherAds">
+    tools:context=".otherAds">
+
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="65dp"
         android:layout_marginHorizontal="70dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
