--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdCategory.vehicle">
+    tools:context=".vehicle">
+
+    <include layout="@layout/toolbar"/>
 
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="65dp"
         android:layout_marginHorizontal="70dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
