--- a/app/src/main/res/layout/finalprod_desc_row_item.xml
+++ b/app/src/main/res/layout/finalprod_desc_row_item.xml
@@ -7,17 +7,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="22dp"
+        android:layout_height="25dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="25dp"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            app:srcCompat="@android:drawable/ic_menu_compass" />
+            app:srcCompat="@drawable/default_dot" />
 
         <TextView
             android:id="@+id/prodFeatureName"
