--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="2dp">
 
         <ImageButton
             android:id="@+id/adDeleteBtn"
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:elevation="2dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_star_border_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -100,9 +101,9 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="fill"
                         android:layout_weight="0"
-                        android:gravity="bottom"
+                        android:gravity="center"
                         android:text="Rs. "
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/AdProdPrice"
