--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1F1D22</color>
-    <color name="colorPrimaryDark">#302D2D</color>
+    <color name="colorPrimaryDark">#454242</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000000</color>
 
