sagar:::FINAL APP phase 4

--- a/app/src/main/res/layout/activity_final_product_view.xml
+++ b/app/src/main/res/layout/activity_final_product_view.xml
@@ -51,7 +51,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <Button
+            <!--<Button
                 android:id="@+id/UpdateBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
                 android:text="Update"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/interestedBtn"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent" />-->
 
             <Button
                 android:id="@+id/contactBtn"
