--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingTop="24dp"
     android:paddingRight="16dp"
@@ -14,48 +14,32 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/nav_profile_img"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/userimage"
         android:layout_weight="2"
         android:paddingTop="8dp"/>
 
-    <!--<ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="2"
-        android:paddingTop="8dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingStart="10dp"
-        android:paddingVertical="15dp"
-        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:layout_weight="1"
-            android:text="USER NAME"
-            android:gravity="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nav_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:text="USER NAME" />
+
+        <TextView
+            android:id="@+id/nav_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
             android:text="EMAIL" />
 
     </LinearLayout>
-
-
-
-
-</LinearLayout>
