--- a/app/src/main/res/layout/price_dialog.xml
+++ b/app/src/main/res/layout/price_dialog.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="100dp">
 
     <TextView
         android:id="@+id/textView"
@@ -27,7 +28,6 @@
         android:layout_marginTop="13dp"
         android:ems="10"
         android:hint="Enter New Price"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
