--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -17,8 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorAccent"
             app:layout_anchor="@+id/appBarLayout"
-            app:layout_anchorGravity="center"
-            app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
+            app:layout_anchorGravity="center"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
