sagar:::FINAL APP phase 4

--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"
     >
     <stroke
-        android:color="@color/colorAccent"
+        android:color="#ffffff"
         android:width="3dp"
         />
     <corners android:radius="20dp"/>
