--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#393e46"
+    android:background="@drawable/backgroundapp"
     tools:context=".LoginActivity">
 
 
@@ -65,8 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordLayout"
         android:layout_marginTop="30dp"
-        android:background="@drawable/round_button"
         android:onClick="logIn"
+        android:backgroundTint="@color/colorAccent"
+        android:background="@drawable/round_button"
         android:text="Log In"
         app:layout_constraintEnd_toEndOf="@+id/googleLoginBtn"
         app:layout_constraintStart_toStartOf="@+id/googleLoginBtn"
