--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,7 @@
         android:id="@+id/categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="50dp"
         android:columnCount="2"
         android:rowCount="2"
         app:layout_constraintBottom_toTopOf="@+id/donateImgBtn"
@@ -111,21 +110,23 @@
         android:id="@+id/donateImgBtn"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:src="@drawable/donatea"
-        android:layout_marginHorizontal="10dp"
-        app:layout_constraintBottom_toTopOf="@id/navigation"
+        android:layout_marginTop="30dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/donatefinal"
+        android:backgroundTint="#f8ef6b"
+        app:layout_constraintBottom_toTopOf="@id/cooL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categories" />
 
+<!--
     <GridLayout
         android:id="@+id/navigation"
-        android:layout_width="316dp"
-        android:layout_height="111dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="10dp"
-        android:columnCount="5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="3"
         android:rowCount="1"
+        android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -141,6 +142,8 @@
             android:layout_marginTop="25dp"
             android:background="@null"
             android:src="@drawable/chat_logo" />
+
+
 
         <ImageButton
             android:id="@+id/newAdButton"
@@ -194,6 +197,111 @@
             android:text="My Account" />
 
     </GridLayout>
+-->
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/cooL"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/donateImgBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingEnd="15dp"
+            android:backgroundTint="@color/colorAccent"
+            android:paddingBottom="5dp"
+            android:layout_gravity="bottom">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingRight="30dp"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/myAdButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="2dp"
+                        android:background="@null"
+                        android:src="@drawable/chat_logo" />
+
+                    <TextView
+                        android:id="@+id/textViewMyAd"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|bottom"
+                        android:text="MyAd" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Post Ad"
+                    android:layout_gravity="bottom"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="30dp"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/myAccountButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="2dp"
+                        android:background="@null"
+                        android:src="@drawable/myaccount_logo" />
+
+                    <TextView
+                        android:id="@+id/textViewAcc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|bottom"
+                        android:text="My Account" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/newAdButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchor="@id/bottomAppBar"
+            app:fabCustomSize="80dp"
+            app:backgroundTint="#D32F2F"
+            app:tint="#ffffff"
+            app:borderWidth="3dp"
+            android:tint="@color/colorAccent"
+            app:layout_anchorGravity="center"
+            android:src="@drawable/pos_ad_logo"/>
+
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
