--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="SignUp Form"
+        android:fontFamily="@font/lora_regular"
         android:textColor="#ffffff"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +42,8 @@
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:fontFamily="@font/lora_regular"
+            android:inputType="textPersonName|textCapWords"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +67,8 @@
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:fontFamily="@font/lora_regular"
+            android:inputType="textEmailAddress"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,6 +92,7 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -113,6 +117,7 @@
             android:id="@+id/editTextConPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -125,6 +130,7 @@
         android:layout_marginTop="15dp"
         android:onClick="signUp"
         android:text="SignUp"
+        android:fontFamily="@font/lora_regular"
         app:layout_constraintEnd_toEndOf="@+id/SUConPwdLayout"
         app:layout_constraintStart_toStartOf="@+id/SUConPwdLayout"
         app:layout_constraintTop_toBottomOf="@id/SUConPwdLayout">
