--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,7 @@
             android:layout_margin="17dp"
             android:background="@null"
             android:tag="Vehicle"
-            app:srcCompat="@drawable/ic_android_black" />
+            app:srcCompat="@drawable/vehclogo" />
 
         <TextView
             android:id="@+id/textView1"
@@ -50,7 +50,7 @@
             android:layout_margin="17dp"
             android:background="@null"
             android:tag="6"
-            app:srcCompat="@drawable/ic_android_black" />
+            app:srcCompat="@drawable/amisclogo" />
 
         <TextView
             android:id="@+id/textView6"
@@ -71,7 +71,7 @@
             android:layout_margin="17dp"
             android:background="@null"
             android:tag="Electronics"
-            app:srcCompat="@drawable/ic_android_black" />
+            app:srcCompat="@drawable/aeleclogo" />
 
         <TextView
             android:id="@+id/textView2"
@@ -92,7 +92,7 @@
             android:layout_margin="17dp"
             android:background="@null"
             android:tag="Books"
-            app:srcCompat="@drawable/ic_android_black" />
+            app:srcCompat="@drawable/abookslogo" />
 
         <TextView
             android:id="@+id/textView3"
@@ -109,11 +109,11 @@
     <ImageButton
         android:id="@+id/donateImgBtn"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#f8ef6b"
         android:scaleType="centerInside"
         android:src="@drawable/donatefinal"
-        android:backgroundTint="#f8ef6b"
         app:layout_constraintBottom_toTopOf="@id/cooL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,33 +203,32 @@
         android:id="@+id/cooL"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/donateImgBtn"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/donateImgBtn">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingEnd="15dp"
+            android:layout_gravity="bottom"
             android:backgroundTint="@color/colorAccent"
-            android:paddingBottom="5dp"
-            android:layout_gravity="bottom">
+            android:paddingEnd="15dp"
+            android:paddingBottom="5dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="30dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingRight="30dp">
 
                     <ImageButton
                         android:id="@+id/myAdButton"
@@ -252,15 +251,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Post Ad"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    android:text="Post Ad" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingLeft="30dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingLeft="30dp">
 
                     <ImageButton
                         android:id="@+id/myAccountButton"
@@ -289,15 +288,14 @@
             android:id="@+id/newAdButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/bottomAppBar"
-            app:fabCustomSize="80dp"
-            app:backgroundTint="#D32F2F"
-            app:tint="#ffffff"
-            app:borderWidth="3dp"
+            android:src="@drawable/pos_ad_logo"
             android:tint="@color/colorAccent"
+            app:backgroundTint="#D32F2F"
+            app:borderWidth="3dp"
+            app:fabCustomSize="80dp"
+            app:layout_anchor="@id/bottomAppBar"
             app:layout_anchorGravity="center"
-            android:src="@drawable/pos_ad_logo"/>
-
+            app:tint="#ffffff" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
