--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -5,10 +5,11 @@
     >
     <stroke
         android:color="#ffffff"
-        android:width="3dp"
+        android:width="2dp"
         />
-    <corners android:radius="20dp"/>
-    <solid android:color="@android:color/transparent"/>
+    <corners android:radius="20dp" />
+    <solid android:color="@android:color/holo_blue_bright" />
+
 
 
 </shape>
