--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,6 +7,12 @@
     android:background="@drawable/backgroundapp"
     tools:context=".SignupActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/manitlogo"
+        android:padding="20dp"
+        android:alpha="0.3"/>
 
     <TextView
         android:id="@+id/textView"
@@ -44,6 +50,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lora_regular"
             android:inputType="textPersonName|textCapWords"
+            android:textCursorDrawable="@null"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,6 +76,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lora_regular"
             android:inputType="textEmailAddress"
+            android:textCursorDrawable="@null"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,6 +102,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
+            android:textCursorDrawable="@null"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,6 +128,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
+            android:textCursorDrawable="@null"
             android:textColor="#f9ed69" />
     </com.google.android.material.textfield.TextInputLayout>
 
