--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -52,7 +52,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="date"
-            android:hint="Date of Purchase" />
+            android:hint="Date of Purchase(in MM/YY)" />
 
         <EditText
             android:id="@+id/kmsDriven"
@@ -70,7 +70,7 @@
             android:layout_weight="1"
             android:ems="10"
 
-            android:hint="Milege(in Kmpl)"
+            android:hint="Mileage(in Kmpl)"
             android:inputType="number" />
 
         <EditText
@@ -176,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="(2-3 Images)"
+        android:text="(2 or 3 Images)"
         app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
         app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
 
