--- a/app/src/main/res/layout/ad_category.xml
+++ b/app/src/main/res/layout/ad_category.xml
@@ -36,7 +36,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="12dp"
-                    android:src="@drawable/userimage"
+                    android:src="@drawable/vehclogo"
                     app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
@@ -93,7 +93,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="12dp"
-                    android:src="@drawable/userimage"
+                    android:src="@drawable/aeleclogo"
                     app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
@@ -122,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="12dp"
-                    android:src="@drawable/userimage"
+                    android:src="@drawable/abookslogo"
                     app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
@@ -179,7 +179,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="12dp"
-                    android:src="@drawable/userimage"
+                    android:src="@drawable/amisclogo"
                     app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
