--- a/app/src/main/res/layout/activity_electronics.xml
+++ b/app/src/main/res/layout/activity_electronics.xml
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Date of Purchase"
+                android:hint="Date of Purchase(in MM/YY)"
                 android:inputType="date" />
 
 
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="(2-3 Images)"
+            android:text="(2 or 3 Images)"
             app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
             app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
 
