sagar:::FINAL APP phase 10

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -183,7 +183,7 @@
                             android:textSize="14sp"
                             android:textStyle="bold"
                             android:layout_marginTop="5dp"
-                            android:text="BACK- DEVELOPER"
+                            android:text="APP DEVELOPER"
                             android:textColor="#FFFFFf"
                             android:gravity="center"/>
                         <LinearLayout
