--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/aspalsh"/>
-    <item>
+    <item android:drawable="@drawable/splash"/>
+    <!--<item>
         <bitmap android:src="@drawable/manitlogo"
             android:tint="#FFFFFF"
-            android:gravity="fill_horizontal"
-            android:alpha="0.2"
+            android:gravity="center"
+            android:alpha=""
             />
     </item>
-
+-->
 </layer-list>
